<?xml version="1.0"?>
<package format="3">
  <name>scale_pad_visualize</name>
  <version>0.0.0</version>
  <description>The scale_pad_visualize package</description>

  <maintainer email="kbrameld@traclabs.com">Kenji Brameld</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>geometric_shapes</depend>
  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
